--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "fatshotty",
   "license": "ISC",
   "dependencies": {
+    "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "got": "^11.8.2",
     "jsdom": "^18.0.0",
     "node-cron": "^3.0.0",
