--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "got": "^11.8.2",
     "jsdom": "^18.0.0",
     "node-cron": "^3.0.0",
-    "slimbot": "^5.1.0"
+    "telegraf": "^4.4.2"
   }
 }
