--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "got": "^11.8.2",
     "jsdom": "^18.0.0",
     "node-cron": "^3.0.0",
+    "scraper-instagram": "^1.0.17",
     "telegraf": "^4.4.2"
   }
 }
