--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "author": "fatshotty",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "jsdom": "^18.0.0",
     "node-cron": "^3.0.0",
     "scraper-instagram": "^1.0.17",
+    "patch-package": "^6.4.7",
     "telegraf": "^4.4.2"
   }
 }
