--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "got": "^11.8.2",
+    "inquirer": "8.2.4",
+    "instagram-private-api": "^1.45.3",
     "jsdom": "^18.0.0",
     "node-cron": "^3.0.0",
-    "telegraf": "^4.4.2",
-    "inquirer": "8.2.4"
+    "telegraf": "^4.4.2"
   }
 }
